# parallel-GA

./: CMakeLists.txt  Chromosome.cc  Chromosome.cpp  Chromosome.h  README.md  RunningConfig.h  main.cc  main.cpp
model/: Chromosome.cc  Chromosome.h
runner/: CellularRunner.cc  CellularRunner.h  MPICellularRunner.cc  MPICellularRunner.h  MPIRunner.cc  MPIRunner.h  OpenMPCellularRunner.cc  OpenMPCellularRunner.h  OpenMPRunner.cc  OpenMPRunner.cpp  OpenMPRunner.h  Runner.cc  Runner.h  SerialCellularRunner.cc  SerialCellularRunner.h  SerialRunner.cc  SerialRunner.cpp  SerialRunner.h
